--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 
 <main>
   <section class="upload-section">
-    <h2>Upload your chart screenshot</h2>
+    <h2>Upload Chart Screenshot</h2>
     <input type="file" id="chartUpload" accept="image/*">
+    <input type="number" id="minPrice" placeholder="Min Price on chart">
+    <input type="number" id="maxPrice" placeholder="Max Price on chart">
     <button id="analyzeBtn">Analyze</button>
   </section>
 
